--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>persanal potfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://coudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -45,7 +45,7 @@
          
             <div class="about_container bd-grid">
             <div class="about_img">
-                <img src="/images/1.JPG">
+                <img src="./images/1.JPG">
             </div>
             <div>
                 <h2 class="about_subtitle">I'am nina iriboneye</h2>
@@ -81,7 +81,7 @@
             
          </div>
          <div class="skills_img">
-        <img src="/images/Counter.PNG">
+        <img src="./images/Counter.PNG">
          </div>
           </div>
         </section>
@@ -90,19 +90,19 @@
          <h2 class="section-title">portfolio</h2>
          <div class="portfolio_container bd-grid">
           <div class="portfolio_img">
-            <img src="/images/Counter.PNG">
+            <img src="./images/Counter.PNG">
             <div class="portfolio_link">
                 <a href="#" class="portfolio_link-name">view detail</a>
             </div>
           </div>
           <div class="portfolio_img">
-            <img src="/images/Counter.PNG">
+            <img src="./images/Counter.PNG">
             <div class="portfolio_link">
                 <a href="#" class="portfolio_link-name">view detail</a>
             </div>
           </div>
           <div class="portfolio_img">
-            <img src="/images/Counter.PNG">
+            <img src="./images/Counter.PNG">
             <div class="portfolio_link">
                 <a href="#" class="portfolio_link-name">view detail</a>
             </div>
